crates/sid-widgets/tests/snapshots/settings_render__settings_db_path_focused.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ DB path ─────────────────────────────────────────────────┐
│> * DB path       ││active : /var/lib/sid/sid.redb                            │
│  o Reset to defau││override: (none)                                          │
│                  ││edit   : (Enter to edit)                                  │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
┌ Recent logs ─────────────────────────────────────────────────────────────────┐
│(no logs)                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
