crates/sid-widgets/tests/snapshots/settings_render__settings_empty.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Settings ────────────────────────────────────────────────────────────────────┐
│(no categories)                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
