crates/sid-widgets/tests/snapshots/settings_render__settings_focus_categories_with_styles.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Theme ───────────────────────────────────────────────────┐
│> * Theme         ││> * cosmos                                                │
│  o Reset to defau││  o cosmos-light                                          │
│                  ││  o dusk                                                  │
│                  ││  o void                                                  │
│                  ││                                                          │
│                  ││                                                          │
│                  ││┌────────────────────────────────────────────────────────┐│
│                  │││✦ cosmos ✦                                              ││
│                  │││  primary accent row                                    ││
│                  │││  muted secondary text                                  ││
│                  │││  success ok                                            ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││Enter to apply  ·  Esc to cancel                        ││
│                  ││└────────────────────────────────────────────────────────┘│
└──────────────────┘└──────────────────────────────────────────────────────────┘
┌ Recent logs ─────────────────────────────────────────────────────────────────┐
│(no logs)                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘

STYLES:
aFFFFFFFFFFFFaaaaaaamfffffffmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
aAAAAAAAAA         amAAAAAAAAAA                                                m
affffffffffffffffffamffffffffffffffff                                          m
a                  amffffffff                                                  m
a                  amffffffff                                                  m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
a                  am                                                          m
aaaaaaaaaaaaaaaaaaaammmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
mmmmmmmmmm                                                                     m
m                                                                              m
mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
