crates/sid-widgets/tests/snapshots/settings_render__settings_focus_subview_with_styles.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Theme ───────────────────────────────────────────────────┐
│> * Theme         ││> * cosmos                                                │
│  o Reset to defau││  o cosmos-light                                          │
│                  ││  o dusk                                                  │
│                  ││  o void                                                  │
│                  ││                                                          │
│                  ││                                                          │
│                  ││┌────────────────────────────────────────────────────────┐│
│                  │││✦ cosmos ✦                                              ││
│                  │││  primary accent row                                    ││
│                  │││  muted secondary text                                  ││
│                  │││  success ok                                            ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││Enter to apply  ·  Esc to cancel                        ││
│                  ││└────────────────────────────────────────────────────────┘│
└──────────────────┘└──────────────────────────────────────────────────────────┘
┌ Recent logs ─────────────────────────────────────────────────────────────────┐
│(no logs)                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘

STYLES:
mffffffffffffmmmmmmmaFFFFFFFaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
mAAAAAAAAA         maAAAAAAAAAA                                                a
mffffffffffffffffffmaffffffffffffffff                                          a
m                  maffffffff                                                  a
m                  maffffffff                                                  a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
m                  ma                                                          a
mmmmmmmmmmmmmmmmmmmmaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
mmmmmmmmmm                                                                     m
m                                                                              m
mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
