crates/sid-widgets/tests/snapshots/settings_render__settings_keybinds_focused.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Keybinds ────────────────────────────────────────────────┐
│> * Keybinds      ││> app.help                 (unbound)                      │
│  o Reset to defau││  app.quit                 KeyChord { code: Char('q'), mod│
│                  ││  workspaces.next          (unbound)                      │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
