crates/sid-widgets/tests/snapshots/settings_render__settings_quick_actions_focused.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Quick actions ───────────────────────────────────────────┐
│> * Quick actions ││> qa.build         Build                [Char('b')|2]     │
│  o Reset to defau││  qa.test          Test                 [-]               │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
┌ Recent logs ─────────────────────────────────────────────────────────────────┐
│(no logs)                                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
