crates/sid-widgets/tests/snapshots/settings_render__settings_theme_focused.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Theme ───────────────────────────────────────────────────┐
│> * Theme         ││> * cosmos                                                │
│  o Reset to defau││  o cosmos-light                                          │
│                  ││  o dusk                                                  │
│                  ││  o void                                                  │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││┌────────────────────────────────────────────────────────┐│
│                  │││✦ cosmos ✦                                              ││
│                  │││  primary accent row                                    ││
│                  │││  muted secondary text                                  ││
│                  │││  success ok                                            ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││                                                        ││
│                  │││Enter to apply  ·  Esc to cancel                        ││
│                  ││└────────────────────────────────────────────────────────┘│
└──────────────────┘└──────────────────────────────────────────────────────────┘
