crates/sid-widgets/tests/snapshots/settings_render__settings_workspace_roots_focused.snap
---
source: crates/sid-widgets/tests/settings_render.rs
expression: s
---
┌ Categories ──────┐┌ Workspace roots ─────────────────────────────────────────┐
│> * Workspace root││> /home/example/vcs                                       │
│  o Reset to defau││  /srv/projects                                           │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
